force-app/main/default/objects/Contact/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF(TODAY()&lt;Birthdate, NULL, IF(MOD(TODAY() - Birthdate,365.2425)&gt;182, CEILING((TODAY() - Birthdate)/365.2425), FLOOR((TODAY() - Birthdate)/365.2425)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>