force-app/main/default/objects/Contact/fields/AgentWise_IL__Additional_Health_Service__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Additional_Health_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Health Service</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AgentWise_IL__Insurance_Plan__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Private Health Service</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AgentWise_IL__Insurance_Plan__c</referenceTo>
    <relationshipLabel>Contacts (Additional Health Service)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>