force-app/main/default/objects/Contact/fields/AgentWise_IL__Compensation_Period__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Compensation_Period__c</fullName>
    <label>Compensation Period</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>