force-app/main/default/objects/Contact/fields/AgentWise_IL__Compensations__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Compensations__c</fullName>
    <label>Compensations</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>