force-app/main/default/objects/Contact/fields/AgentWise_IL__Credit_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Credit_Card_Number__c</fullName>
    <label>Credit Card Number</label>
    <length>19</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>