force-app/main/default/objects/Contact/fields/AgentWise_IL__Credit_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Credit_Card_Type__c</fullName>
    <label>Credit Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MasterCard</fullName>
            </value>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>VISA</fullName>
            </value>
            <value>
                <fullName>Isracard</fullName>
            </value>
            <value>
                <fullName>Diners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>