force-app/main/default/objects/Contact/fields/AgentWise_IL__Credit_Card_Validity_Month__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Credit_Card_Validity_Month__c</fullName>
    <label>Credit Card Validity Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>