force-app/main/default/objects/Contact/fields/AgentWise_IL__Credit_Card_Validity_Year__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Credit_Card_Validity_Year__c</fullName>
    <label>Credit Card Validity Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>