force-app/main/default/objects/Contact/fields/AgentWise_IL__Current_PCP_ID__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Current_PCP_ID__c</fullName>
    <label>Current PCP ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>