force-app/main/default/objects/Contact/fields/AgentWise_IL__Current_PCP_Location__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Current_PCP_Location__c</fullName>
    <label>Current PCP Location</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>