force-app/main/default/objects/Contact/fields/AgentWise_IL__Current_Savings__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Current_Savings__c</fullName>
    <description>לצורך טופס הנמקה, חסכונות קיימים</description>
    <label>חסכונות קיימים</label>
    <type>TextArea</type>
</CustomField>