force-app/main/default/objects/Contact/fields/AgentWise_IL__Customer_Classification__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Customer_Classification__c</fullName>
    <label>Customer Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>