force-app/main/default/objects/Contact/fields/AgentWise_IL__Defrayment_Values_Exist__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Defrayment_Values_Exist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Defrayment Values Exist</label>
    <type>Checkbox</type>
</CustomField>