force-app/main/default/objects/Contact/fields/AgentWise_IL__Employer_Withholdings__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Employer_Withholdings__c</fullName>
    <label>Employer Withholdings</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>