force-app/main/default/objects/Contact/fields/AgentWise_IL__Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Employment_Status__c</fullName>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Independent</fullName>
                <default>true</default>
                <label>Independent</label>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Controlling Shareholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>