force-app/main/default/objects/Contact/fields/AgentWise_IL__End_of_Work_Date__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__End_of_Work_Date__c</fullName>
    <label>End Of Work Date</label>
    <type>Date</type>
</CustomField>