force-app/main/default/objects/Contact/fields/AgentWise_IL__End_Withholdings_Age__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__End_Withholdings_Age__c</fullName>
    <label>End Withholdings Age</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>