force-app/main/default/objects/Contact/fields/AgentWise_IL__English_First_Name__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__English_First_Name__c</fullName>
    <label>English First Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>