force-app/main/default/objects/Contact/fields/AgentWise_IL__Existing_Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Existing_Care_Plan__c</fullName>
    <description>Used to freely describe existing care plan\s</description>
    <label>Existing Care Plan</label>
    <type>TextArea</type>
</CustomField>