force-app/main/default/objects/Contact/fields/AgentWise_IL__Extension__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Extension__c</fullName>
    <label>Extension</label>
    <length>4</length>
    <type>Text</type>
</CustomField>