force-app/main/default/objects/Contact/fields/AgentWise_IL__Family_Relation__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Family_Relation__c</fullName>
    <label>Family Relation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Domestic Partner</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Widow/er</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>