force-app/main/default/objects/Contact/fields/AgentWise_IL__Height__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Height__c</fullName>
    <label>Height</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>