force-app/main/default/objects/Contact/fields/AgentWise_IL__HmoFunding__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__HmoFunding__c</fullName>
    <label>מימון ביטוח בריאות</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>פרטי</fullName>
            </value>
            <value>
                <fullName>מעסיק</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>