force-app/main/default/objects/Contact/fields/AgentWise_IL__Household__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Account that was chosen is not with a Household record type</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Household</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Family Members</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>