force-app/main/default/objects/Contact/fields/AgentWise_IL__Id_Type__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Id_Type__c</fullName>
    <label>Id Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>תעודת זהות</fullName>
            </value>
            <value>
                <fullName>דרכון</fullName>
            </value>
            <value>
                <fullName>תאגיד</fullName>
            </value>
            <value>
                <fullName>אחר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>