force-app/main/default/objects/Contact/fields/AgentWise_IL__Is_Medical_Condition_Proper__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Is_Medical_Condition_Proper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Medical Condition Proper</label>
    <type>Checkbox</type>
</CustomField>