force-app/main/default/objects/Contact/fields/AgentWise_IL__LTC_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__LTC_Monthly_Payment__c</fullName>
    <label>LTC Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>