force-app/main/default/objects/Contact/fields/AgentWise_IL__LTC_Through_Employer__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__LTC_Through_Employer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LTC Through Employer</label>
    <type>Checkbox</type>
</CustomField>