force-app/main/default/objects/Contact/fields/AgentWise_IL__LTC_With_HMO__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__LTC_With_HMO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LTC With HMO</label>
    <type>Checkbox</type>
</CustomField>