force-app/main/default/objects/Contact/fields/AgentWise_IL__LTC_With_HMO_Seniority__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__LTC_With_HMO_Seniority__c</fullName>
    <label>LTC With HMO Seniority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>