force-app/main/default/objects/Contact/fields/AgentWise_IL__Mailing_Apartment_Number__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Mailing_Apartment_Number__c</fullName>
    <label>Mailing Apartment Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>