force-app/main/default/objects/Contact/fields/AgentWise_IL__Mailing_Building_Number__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Mailing_Building_Number__c</fullName>
    <label>Mailing Building Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>