force-app/main/default/objects/Contact/fields/AgentWise_IL__Manual_Age__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Manual_Age__c</fullName>
    <label>Manual Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>