force-app/main/default/objects/Contact/fields/AgentWise_IL__Marriage_Date__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Marriage_Date__c</fullName>
    <label>Marriage Date</label>
    <type>Date</type>
</CustomField>