force-app/main/default/objects/Contact/fields/AgentWise_IL__Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Monthly_Payment__c</fullName>
    <description>אם יש ביטוח בריאות פרטי, העלות שלו, אם יש דרך מעסיק, החלק שהעובד משלם</description>
    <label>Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>