force-app/main/default/objects/Contact/fields/AgentWise_IL__Name_Of_Father__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Name_Of_Father__c</fullName>
    <label>Name Of Father</label>
    <length>64</length>
    <type>Text</type>
</CustomField>