force-app/main/default/objects/Contact/fields/AgentWise_IL__Net_Salary__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Net_Salary__c</fullName>
    <label>Net Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>