force-app/main/default/objects/Contact/fields/AgentWise_IL__Network__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Network__c</fullName>
    <label>Network</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>מכבי</fullName>
            </value>
            <value>
                <fullName>כללית</fullName>
            </value>
            <value>
                <fullName>מאוחדת</fullName>
            </value>
            <value>
                <fullName>לאומית</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>