force-app/main/default/objects/Contact/fields/AgentWise_IL__Number_of_Children__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Number_of_Children__c</fullName>
    <label>Children #</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>