force-app/main/default/objects/Contact/fields/AgentWise_IL__Other_Entrance_Number__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Other_Entrance_Number__c</fullName>
    <label>Other Entrance Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>