force-app/main/default/objects/Contact/fields/AgentWise_IL__Other_P_O_B__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Other_P_O_B__c</fullName>
    <label>Other P.O.B</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>