force-app/main/default/objects/Contact/fields/AgentWise_IL__Passed_Away__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Passed_Away__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passed Away</label>
    <type>Checkbox</type>
</CustomField>