force-app/main/default/objects/Contact/fields/AgentWise_IL__Passed_Away_Date__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Passed_Away_Date__c</fullName>
    <label>Passed Away Date</label>
    <type>Date</type>
</CustomField>