force-app/main/default/objects/Contact/fields/AgentWise_IL__Passport_State__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Passport_State__c</fullName>
    <label>Passport State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Afghanistan AFG</fullName>
            </value>
            <value>
                <fullName>Åland Islands ALA</fullName>
            </value>
            <value>
                <fullName>Albania ALB</fullName>
            </value>
            <value>
                <fullName>Algeria DZA</fullName>
            </value>
            <value>
                <fullName>American Samoa ASM</fullName>
            </value>
            <value>
                <fullName>Andorra AND</fullName>
            </value>
            <value>
                <fullName>Angola AGO</fullName>
            </value>
            <value>
                <fullName>Anguilla AIA</fullName>
            </value>
            <value>
                <fullName>Antarctica ATA</fullName>
            </value>
            <value>
                <fullName>Antigua and Barbuda ATG</fullName>
            </value>
            <value>
                <fullName>Argentina ARG</fullName>
            </value>
            <value>
                <fullName>Armenia ARM</fullName>
            </value>
            <value>
                <fullName>Aruba ABW</fullName>
            </value>
            <value>
                <fullName>Australia AUS</fullName>
            </value>
            <value>
                <fullName>Austria AUT</fullName>
            </value>
            <value>
                <fullName>Azerbaijan AZE</fullName>
            </value>
            <value>
                <fullName>Bahamas BHS</fullName>
            </value>
            <value>
                <fullName>Bahrain BHR</fullName>
            </value>
            <value>
                <fullName>Bangladesh BGD</fullName>
            </value>
            <value>
                <fullName>Barbados BRB</fullName>
            </value>
            <value>
                <fullName>Belarus BLR</fullName>
            </value>
            <value>
                <fullName>Belgium BEL</fullName>
            </value>
            <value>
                <fullName>Belize BLZ</fullName>
            </value>
            <value>
                <fullName>Benin BEN</fullName>
            </value>
            <value>
                <fullName>Bermuda BMU</fullName>
            </value>
            <value>
                <fullName>Bhutan BTN</fullName>
            </value>
            <value>
                <fullName>Bolivia (Plurinational State of) BOL</fullName>
            </value>
            <value>
                <fullName>Bonaire, Sint Eustatius and Saba BES</fullName>
            </value>
            <value>
                <fullName>Bosnia and Herzegovina BIH</fullName>
            </value>
            <value>
                <fullName>Botswana BWA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>