force-app/main/default/objects/Contact/fields/AgentWise_IL__Pension_Part_Of_Salary__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Pension_Part_Of_Salary__c</fullName>
    <inlineHelpText>שכר חודשי קובע - שכר מבוטח - חלק המשכורת החודשית שבגינו הופרשו דמי גמולים לקרן פנסיה.</inlineHelpText>
    <label>Deprecated</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>