force-app/main/default/objects/Contact/fields/AgentWise_IL__Pension_Part_Of_Salary_New__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Pension_Part_Of_Salary_New__c</fullName>
    <inlineHelpText>שכר חודשי קובע - שכר מבוטח - חלק המשכורת החודשית שבגינו הופרשו דמי גמולים לקרן פנסיה.</inlineHelpText>
    <label>Pension Part Of Salary</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>