force-app/main/default/objects/Contact/fields/AgentWise_IL__PersonalIP__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__PersonalIP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personal Health Plan</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AgentWise_IL__Insurance_Plan__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Individual Health Plan</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AgentWise_IL__Insurance_Plan__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contact_IP</relationshipName>
    <type>Lookup</type>
</CustomField>