force-app/main/default/objects/Contact/fields/AgentWise_IL__Picture__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Picture__c</fullName>
    <formula>IF(AgentWise_IL__Picture_Id__c != null,IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; &amp;   AgentWise_IL__Picture_Id__c ,&quot;&quot;),HYPERLINK(&quot;/apex/&quot; &amp;$Label.AgentWise_IL__PackagePrefix &amp; &quot;UploadPicture?id=&quot; &amp; Id &amp; &quot;&amp;objectType=contact&quot;,$Label.AgentWise_IL__Upload_Picture,&quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Picture</label>
    <type>Text</type>
</CustomField>