force-app/main/default/objects/Contact/fields/AgentWise_IL__Pilot_License__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Pilot_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pilot License</label>
    <type>Checkbox</type>
</CustomField>