force-app/main/default/objects/Contact/fields/AgentWise_IL__Premium__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Premium__c</fullName>
    <label>Premium</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>קבועה</fullName>
            </value>
            <value>
                <fullName>משתנה</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>