force-app/main/default/objects/Contact/fields/AgentWise_IL__Previous_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Previous_Last_Name__c</fullName>
    <label>Previous Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>