force-app/main/default/objects/Contact/fields/AgentWise_IL__Profession__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Profession__c</fullName>
    <label>Profession</label>
    <length>20</length>
    <type>Text</type>
</CustomField>