force-app/main/default/objects/Contact/fields/AgentWise_IL__Rating__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>