force-app/main/default/objects/Contact/fields/AgentWise_IL__Representing_Employee__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Representing_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deprecated</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Dependents</relationshipLabel>
    <relationshipName>Dependents</relationshipName>
    <type>Lookup</type>
</CustomField>