force-app/main/default/objects/Contact/fields/AgentWise_IL__Requested_PCP_Name__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Requested_PCP_Name__c</fullName>
    <label>Requested PCP Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>