force-app/main/default/objects/Contact/fields/AgentWise_IL__Risky_Habit_Occupation__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Risky_Habit_Occupation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risky Habit/Occupation</label>
    <type>Checkbox</type>
</CustomField>