force-app/main/default/objects/Contact/fields/AgentWise_IL__Smoker__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Smoker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smoker</label>
    <type>Checkbox</type>
</CustomField>